@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- When __slots__ are set to a unicode string, make it work the same as 
+  setting a plain string, ie don't expand to single letter identifiers.
+
 - Request #1191699:  Slices can now be pickled.
 
 - Request #1193128:  str.translate() now allows a None argument for
